--- a/packages/reaction-taxes/client/settings/avalara.html
+++ b/packages/reaction-taxes/client/settings/avalara.html
@@ -2,7 +2,7 @@
   {{#autoForm collection="ReactionCore.Collections.Packages" schema="ReactionCore.Schemas.TaxPackageConfig" doc=packageData type="update" id="avalara-update-form"}}
 
       <div class="panel-body">
-        {{>afQuickField name='settings.avalara.apiLoginId'}}
+        {{>afQuickField name='settings.avalara.apiLoginId' class='form-control'}}
       </div>
       {{> shopSettingsSubmitButton}}
   {{/autoForm}}
